# postgres-es

./: Cargo.toml  Dockerfile  README.md  buildspec_test.yml  docker-compose.yml
db/: init.sql
src/: aggregate_store.rs  connection.rs  cqrs.rs  error.rs  event_repository.rs  event_store.rs  lib.rs  queries.rs  query_repository.rs  snapshot_repository.rs  snapshot_store.rs  store.rs  testing.rs  tools.rs  types.rs  view_repository.rs
tests/: lib.rs
