[package]
name = "postgres-es"
version = "0.2.5"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "MIT"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A Postgres implementation of an event store for cqrs-es."
repository = "https://github.com/serverlesstechnology/postgres-es"
documentation = "https://docs.rs/postgres-es"
readme = "README.md"

[dependencies]
cqrs-es = "0.2.5"
persist-es = "0.2.5"

async-trait = "0.1.52"
futures = "0.3.19"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.5.10", features = [ "postgres" , "runtime-tokio-rustls", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "0.8.2", features = ["v4"]}
